<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/authRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_background"
    android:gravity="center"
    android:padding="32dp">

    <!-- 로고 -->

    <!-- 메시지 -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="270dp"
        android:layout_height="268dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/logo_circle_bg"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/wy_logo2" />

    <TextView
        android:id="@+id/mainMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="슬기로운 청년생활을 위한 첫걸음"
        android:textColor="@color/color_on_background"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/subMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="간편한 가입으로 문을 열어주세요!"
        android:textColor="@color/color_on_muted"
        android:textSize="14sp"
        android:layout_marginBottom="40dp" />

    <!-- 버튼 그룹 -->
    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <!-- 로그인 버튼 -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:backgroundTint="@color/color_primary"
            android:textSize="16sp"
            android:layout_marginBottom="12dp" />

        <!-- 회원가입 버튼 -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            android:textColor="@color/color_on_background"
            android:backgroundTint="@color/color_secondary"
            android:textSize="16sp"
            android:background="@drawable/outline_button" />
    </LinearLayout>

</LinearLayout>
